--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    he
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cartoon</title>
+  </head>
+  <body style="margin: 0px; padding: 0px; overflow: hidden;">
+    <canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
+    <script src="./index.js"></script>
+  </body>
 </html>
