--- a/projects/cartoon/index.html
+++ b/projects/cartoon/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cartoon</title>
   </head>
-  <body style="margin: 0px; padding: 0px; overflow: hidden;">
+  <body style="margin: 0px; padding: 0px; overflow: hidden">
     <canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
     <script src="./index.js"></script>
   </body>
