--- a/projects/cartoon/index.html
+++ b/projects/cartoon/index.html
@@ -7,6 +7,7 @@
   </head>
   <body style="margin: 0px; padding: 0px; overflow: hidden">
     <canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
+    <p id="btn"></p>
     <script src="./index.js"></script>
   </body>
 </html>
