--- a/labs/fruit/index.html
+++ b/labs/fruit/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="./index.js"></script>
-    <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
-</body>
+  </head>
+  <body>
+    <canvas id="canvas" style="width: 100vw; height: 100lvh"></canvas>
+    <script src="index.js"></script>
+  </body>
 </html>
