Update canvas size and button position

--- a/projects/cartoon/index.html
+++ b/projects/cartoon/index.html
@@ -6,8 +6,7 @@
     <title>Cartoon</title>
   </head>
   <body style="margin: 0px; padding: 0px; overflow: hidden">
-    <canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
-    <p id="btn"></p>
+    <canvas id="canvas" style="width: 100%; height: 100dvh"></canvas>
     <script src="./index.js"></script>
   </body>
 </html>
