--- a/projects/forms/index.html
+++ b/projects/forms/index.html
@@ -11,7 +11,7 @@
     <form id="weightForm" style="display: inline-block;">
         <div> 
         <label for="weight">Weight:</label>
-        <input inputmode="numeric" min="1" type="number" id="weight" class="form-control" placeholder="Enter your weight">
+        <input required inputmode="numeric" min="1" type="number" id="weight" class="form-control" placeholder="Enter your weight">
         </div>
         <label for="weightUnit">Unit:</label>
         <select id="weightUnit" class="form-control">
