Update audio lab files with new instrument images and music sources

--- a/labs/audio/index.html
+++ b/labs/audio/index.html
@@ -6,13 +6,41 @@
     <title>Audio Lab</title>
 </head>
 <body>
-    <img src="./artifact/source.gif" usemap="#source-map">
-    <map name="source-map">
-        <audio id="sourceMusicPlayer">
-            <source src="./data/better-day.mp3" type="audio/mpeg">
+    <img id="instrument-one" src="./artifact/unknown/unknown.jpeg" usemap="#source-map-one">
+    <map name="source-map-one">
+        <audio id="music-one">
+        <source src="./artifact/better-day.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
-        <area id="" target="_self" alt="" title="" href="" coords="30,199,300,16,276,0,106,101,0,169,5,172,4,182,30,198,296,8" shape="poly">
+    </map>
+    <img id="instrument-two" src="./artifact/drum/drum.jpeg" usemap="#image-map-two">
+    <map name="image-map-two">
+        <audio id="music-two">
+            <source src="./artifact/unknown/perfect-beauty.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio> 
+        <area style=" background-color: red" target="_self" alt="" title="" href="" coords="167,136,219,101,314,63,367,55,532,34,533,39,494,56,462,74,464,88,468,103,467,115,478,115,489,111,504,111,512,102,520,102,525,106,466,123,480,141,489,161,472,127,491,176,494,187,495,203,497,224,496,244,492,259,473,295,456,315,388,357,344,372,244,377,192,339,171,325,145,250,138,192" shape="poly">
+    </map>
+    <img id="instrument-three" style="width: 10rem;"  src="./artifact/xylophone/xylophone.jpeg" usemap="#image-map-three"></img>
+    <map name="image-map-three">
+        <audio id="music-three">
+            <source src="./artifact/xylophone/separation.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio> 
+    </map>
+    <img id="instrument-four" src="./artifact/harp/harp.jpeg" usemap="#image-map-four"></img>
+    <map name="image-map-four">
+        <audio id="music-four">
+            <source src="./artifact/harp/once-in-paris.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio> 
+    </map>
+    <img id="instrument-five" src="./artifact/lute/lute.jpeg" usemap="#image-map-five"></img>
+    <map name="image-map-five">
+        <audio id="music-five">
+        <source src="./artifact/lute/baby-mandala.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
     </map>
     <script src="./index.js"></script>
 </body>
