chore: Update resume with education, skills, and projects

--- a/labs/resume/index.html
+++ b/labs/resume/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Resume</title>
+  </head>
+  <body class="bg-slate-300 m-0 p-0">
+    <h1 class="font-bold text-3xl text-center mt-5 uppercase">Bi Rong Liu</h1>
+    <h2 class="text-center text-sm sm:text-base">New York, NY | (929) 463-8891 | birong.liu75@gmail.com | https://linkedin.com/in/birongliu</h2>
+    <section class="m-5">
+    <div>
+        <h1 class="font-bold text-2xl">Education</div>
+        <div class="border-b border-black"></div>
+        <div class="flex justify-between items-center">
+            <div class="flex space-x-1">
+                <h2 class="font-bold">B.S., Computer Science</h2>
+            </div>
+            <h2>Expected 2025</h2>
+        </div>
+        <h2>Brooklyn College, CUNY</h2>
+        <ul class="list-disc ml-8">
+            <li class="space-x-1 flex">
+                <h2>- <span class="font-bold">Honors & Awards: </span>Dean’s List (Spring 2022)</h2>
+            </li>
+            <li class="space-x-1 flex">
+                <h2>- <span class="font-bold">Courses:</span> Introduction to Programming Using Java, Data Structures, Analysis of Algorithms</h2>
+            </li>
+        </ul>
+    </div>
+    <div>
+    <h1 class="font-bold text-2xl mt-2">Skills & Certifications</h1>
+        <div class="border-b border-black"></div>
+        <ul>
+            <li class="flex space-x-1">         
+                <h2><span class="font-bold">Tools: </span>Xcode, VSCode</h2>
+            </li>
+            <li class="flex space-x-1">
+                <h2><span class="font-bold">Language: </span>Swift, Java, TypeScript </h2>
+            </li>
+            <li class="flex space-x-1">
+                <h2><span class="font-bold">Certifications:</span> CodePath Cyber Security (Fall 2023), CodePath IOS Developement (Spring 2024)</h2>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <h1 class="font-bold text-2xl mt-2">Projects</h1>
+        <div class="border-b border-black"></div>
+        <ul>
+            <li>
+            <div class="flex justify-between items-center">
+                <h2><span class="font-bold">FinFlow </span>| <a class="hover:underline" href="https://github.com/birongliu/FinFlow">Github</a> </h2>
+                <h2>2024-Present</h2>
+            </div>
+                <h2 class="ml-8">- Developed an IOS application to enhance financial decisions by implementing user spending tracking analysis features.</h2>
+                <h2 class="ml-8">- Designed an modern user interface utilizing design patterns to keep track of users spending.</h2>
+                <h2 class="ml-8">- Utlized Swift Language, UIKit</h2>
+            </li>
+            <li>
+                <div class="flex justify-between items-center mt-2">
+                    <h2><span class="font-bold">Multimedia Programming </span>| <a class="hover:underline" href="https://github.com/birongliu/multimedia-programming">Github</a> </h2>
+                    <h2>2024-Present</h2>
+                </div>
+                    <h2 class="ml-8">- Developed and created different projects and labs ranging from cartoon using canvas to resume project using tailwindcss for CISC 3610 Intro to Multimedia Programming class</h2>
+                </li>
+        </ul>
+    </div>
+    </section>
 </body>
 </html>
+
