remove phone number

--- a/labs/resume/index.html
+++ b/labs/resume/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-slate-300 m-0 p-0">
     <h1 class="font-bold text-3xl text-center mt-5 uppercase">Bi Rong Liu</h1>
-    <h2 class="text-center text-sm sm:text-base">New York, NY | (929) 463-8891 | birong.liu75@gmail.com | https://linkedin.com/in/birongliu</h2>
+    <h2 class="text-center text-sm sm:text-base">New York, NY | birong.liu75@gmail.com | https://linkedin.com/in/birongliu</h2>
     <section class="m-5">
     <div>
         <h1 class="font-bold text-2xl">Education</div>
